--- a/Source/Properties/Resources.resx
+++ b/Source/Properties/Resources.resx
@@ -122,6 +122,6 @@
     <value>..\Resources\DefaultSteamShortcutIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DefaultTarget" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DefaultTarget.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+    <value>..\Resources\DefaultTarget.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
